<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_screen"
            android:icon="@drawable/ic_menu_screen"
            android:title="@string/menu_screen" />
        <item
            android:id="@+id/nav_mode"
            android:icon="@drawable/ic_menu_led"
            android:title="@string/menu_mode" />
        <item
            android:id="@+id/nav_remote"
            android:icon="@drawable/ic_menu_remote"
            android:title="@string/menu_remote" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/contact_developer" />
        </menu>
    </item>


    <item
        android:id="@+id/nav_exit"
        android:icon="@drawable/ic_menu_exit"
        android:title="@string/exit" />

</menu>
