<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_screen"
        android:name="com.example.rpiclient.ScreenFragment"
        android:label="@string/menu_screen"
        tools:layout="@layout/fragment_screen">

    </fragment>


    <fragment
        android:id="@+id/nav_ledmode"
        android:name="com.example.rpiclient.LedModeFragment"
        android:label="@string/menu_mode"
        tools:layout="@layout/fragment_mode" />

    <fragment
        android:id="@+id/nav_remote"
        android:name="com.example.rpiclient.ScreenFragment"
        android:label="@string/menu_remote"
        tools:layout="@layout/fragment_remote" />
</navigation>